# stlog

./: .gitignore  .mergify.yml  README.md  README.md.j2  Taskfile.yml  change_version.py  invoke.yml  leak.py  main.py  make_readme.py  mkdocs.yml  pyproject.toml  restore_version.py  tasks.py  tasks.toml  test.py  test2.py  test3.py
.github/: renovate.json5
.github/workflows/: ci.yaml  common-labels.yml  foo.yml  lint.yaml  renovate.yml
.task/: make-readme.py
.task/taskfiles/: Taskfile-python-uv.yml
docs/: api_reference.md  configure.md  dev.md  extend.md  faq.md  howto.md  index.md  quickstart.md  tuning.md  usage.md
docs/python/: configure1.py  format1.py  format1bis.py  format2.py  format3.py  format4.py  format5.py  qs0.py  qs1.py  qs2.py  qs3.py  termtosvg.py  termtosvg.sh  usage1.py  usage2.py  usage2.sh  usage2bis.sh  usage3.py  usage3bis.py  usage4.py  usage5.py  usage6.py  usage_mix1.py  usage_mix2.py
docs/stylesheets/: extra.css
standard_structlog/: __init__.py  adapter.py  base.py  context.py  formatter.py  handler.py  output.py  setup.py
stlog/: __init__.py  _json_formatter.py  adapter.py  base.py  context.py  filter.py  formatter.py  handler.py  kvformatter.py  output.py  setup.py
tests/: conftest.py  test_adapter.py  test_base.py  test_context.py  test_formatter.py  test_handler.py  test_integration.py  test_output.py  test_standard_structlog.py  test_usecases.py  utils.py
