[project]
name = "stlog"
version = "0.0.0"
description = 'Dependency free structured logging library fully compatible with standard Python logging with "good/opinionated" default values'
authors = [{ name = "Fabien MARTY", email = "fabien.marty@gmail.com" }]
maintainers = [{ name = "Fabien MARTY", email = "fab@fabien-marty.dev" }]
requires-python = ">=3.7"
readme = "README.md"
license = "MIT"
keywords = ["structured", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/fabien-marty/stlog"
Documentation = "https://fabien-marty.github.io/stlog/"
Repository = "https://github.com/fabien-marty/stlog.git"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pdoc3",
    "mkdocs-material",
    "rich",
    "pytest",
    "pytest-cov",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
    "setuptools",
    "types-pyyaml",
    "jinja2-shell-extension",
    "termtosvg",
    "dunamai",
]

[tool.hatch.build.targets.sdist]
include = ["stlog"]

[tool.hatch.build.targets.wheel]
include = ["stlog"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "W", "N", "UP", "B", "I", "PL", "RUF"]
ignore = ["E501", "PLR2004"]
line-length = 88
target-version = "py37"
extend-exclude = ["docs/python", "html"]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
exclude = ['^html/.*']
